mise à jour données

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
     "imageSrc": "projects/project2.png",
     "description":"Ceci est un mini site d'inscription CRUD que j'ai développé en Flask, histoire de m'entrainer sur la mise en place d'hébergement par site et par dossier et aussi la mise en place d'un serveur DNS sur Ubuntu(Linux)",
     "skills": ["Flask", "Sqlite", "Réseaux"],
-    "demo": "",
+    "demo": "#",
     "source": "https://www.github.com/mamadoujuniorsy/flask_mini_site"
   },
   {
@@ -12,7 +12,7 @@
     "imageSrc": "projects/project.png",
     "description": "Ceci est un projet réalisé pour notre mémoire de DST, c'est une plateforme de détection de Fake News qui utilise des modéles entrainé avec la combinaison du NLP et d'autres algos pour garantir la puissance du modéle",
     "skills": ["Python", "Flask", "Algorithme IA", "Conception"],
-    "demo": "",
+    "demo": "#",
     "source": "https://www.github.com/mamadoujuniorsy/fake_news_detection"
   },
   {
@@ -20,7 +20,7 @@
     "imageSrc": "projects/project1.png",
     "description": "Ce mini projet m'a permis de tester mes skills en laravel avec la mise en place de la page d'administration d'un site e_commerce",
     "skills": ["Laravel", "MySql"],
-    "demo": "",
+    "demo": "#",
     "source": "https://www.github.com/mamadoujuniorsy/laravel_e_commerce"
   },
   {
@@ -28,7 +28,7 @@
     "imageSrc": "projects/route.png",
     "description": "Ce projet m'a permis de mettre en place un site web qui permet de s'entrainer sur le code de la route",
     "skills": ["React JS", "Css"],
-    "demo": "",
+    "demo": "#",
     "source": "https://www.github.com/mamadoujuniorsy/code_de_la_route"
   },
   {
@@ -36,7 +36,7 @@
     "imageSrc": "projects/project2.png",
     "description": "Ceci est un mini projet qui nous a été donné lors d'un examen qui consistait a développé une application de blog mobile android",
     "skills": ["Android Studio", "Java", "XML"],
-    "demo": "",
+    "demo": "#",
     "source": "https://www.github.com/mamadoujuniorsy/laravel_e_commerce"
   },
   {
@@ -44,7 +44,16 @@
     "imageSrc": "projects/project1.png",
     "description": "Ceci est le code de mon portfolio qui utilise React JS et Css",
     "skills": ["React JS", "Css"],
-    "demo": "",
+    "demo": "https://mamadoujuniorsy.github.io/react_portfolio/",
     "source": "https://www.github.com/mamadoujuniorsy/react-portfolio"
+  },
+  {
+    "title": "nike clone",
+    "imageSrc": "projects/project1.png",
+    "description": "Ceci est un site de vente frontend de nike qui utilise React JS et tailwind css",
+    "skills": ["React JS", "Css"],
+    "demo": "https://mamadoujuniorsy.github.io/nike/",
+    "source": "https://www.github.com/mamadoujuniorsy/nike"
   }
+
 ]
